@@ -4,8 +4,8 @@ Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
 - recalculating last physical line: not done after load
-- activity log: log viewer needs tail and copy features, also event
-  listener
+- activity log: log viewer needs copy
+- quick copy: click on bracket
 - better chunk merging
 - split long lines
 - perl: q{}, etc.
